--- a/SkillsShowcase.csproj
+++ b/SkillsShowcase.csproj
@@ -188,6 +188,9 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Account\Web.config" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Resources\cancel.png" />
+    <Content Include="Resources\checked.png" />
+    <Content Include="Resources\plus.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
